hopefully fixing keyboard overlap

--- a/Wordle/wordlestyles.css
+++ b/Wordle/wordlestyles.css
@@ -21,10 +21,9 @@ html, body {
     width: 100%;
     max-width: 500px;
     margin: 0 auto;
-    height: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
-
 }
 
 header {
@@ -187,8 +186,8 @@ span:before {
     width: 100%;
     justify-content: center;
     align-items: center;
-    font-size: 1.5rem;
-    line-height: 1.5rem;
+    font-size: 1.5em;
+    line-height: 1.5em;
     font-weight: bold;
     vertical-align: middle;
     box-sizing: border-box;
@@ -198,39 +197,35 @@ span:before {
 }
 
 
-#keyboard-container {
-    height: 200px;
+.keyboard-container {
+    display: grid;
+    grid-template-columns: repeat(20, minmax(auto, 1.25em));
+    grid-auto-rows: 3em;
+    grid-gap: .8em;
+    column-gap: .4em;
+    justify-content: center;
+    margin: 0 8px 8px 8px;
+    padding-bottom: 8px;
 }
 
-.keyboard-row {
+.key {
+    font-size: inherit;
+    grid-column: span 2;
+    border: none;
+    padding: 0;
     display: flex;
     justify-content: center;
-    margin: 0 auto 8px;
-    touch-action: manipulation;
-}
-
-.keyboard-row button {
-    font-family: inherit;
-    font-weight: bold;
-    border: 0;
-    padding: 0;
-    height: 58px;
-    cursor: pointer;
-    background-color: rgb(129, 131, 132);
+    align-items: center;
+    background-color:rgb(129, 131, 132);
     color: rgb(215, 218, 220);
-    flex-grow: 1;
-    margin-right: 5px;
-    margin-bottom: 5px;
-    border-radius: 3px;
+    border-radius: .25em;
+    cursor: pointer;
     user-select: none;
+    height: 3.5em;
 }
 
-.keyboard-row button.wide-button {
-    flex-grow: 1.5;
-}
-
-.spacer-half {
-    flex-grow: 0.5;
+.key.large {
+    grid-column: span 3;
 }
 
 @keyframes press {
@@ -246,5 +241,12 @@ span:before {
     to {
         opacity: 100%;
         transform: scale(1)
+    }
+}
+
+@media (max-height: 600px){
+    .square{
+        font-size: 1rem;
+        line-height: 1rem;
     }
 }
